feat(pico_midi_cv): adds Pico build end

--- a/pico_midi_cv/platformio.ini
+++ b/pico_midi_cv/platformio.ini
@@ -1,12 +1,18 @@
-[env:pico2]
+; Shared settings for both boards
+[common]
 ; Official PlatformIO platform doesn't support RP2350/Pico 2 yet.
 ; Using maxgerhardt's fork which adds earlephilhower core + RP2350 support.
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board = rpipico2
 framework = arduino
 board_build.core = earlephilhower
-
 lib_deps =
     fortyseveneffects/MIDI Library@^5.0.2
-
 monitor_speed = 115200
+
+[env:pico]
+extends = common
+board = rpipico
+
+[env:pico2]
+extends = common
+board = rpipico2
